# XEO

./: .gitignore  DEPLOYMENT.md  PRD.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  railway.json  schema.sql
backend/src/: config.py  main.py
backend/src/api/: __init__.py
backend/src/api/routes/: __init__.py  admin.py  post.py  profile.py
backend/src/db/: __init__.py  supabase_client.py
backend/src/engine/: __init__.py  feature_extractor.py  weighted_scorer.py
backend/src/services/: content_optimizer.py  personas.py  profile_analyzer.py  score_predictor.py  sela_api_client.py  x_algorithm_advisor.py
backend/tests/: test_content_optimizer.py  test_feature_extractor.py  test_profile_analyzer.py  test_score_predictor.py  test_weighted_scorer.py
docs/plans/: 2025-01-25-xeo-full-implementation.md  2025-01-27-ui-layout-redesign.md  2026-01-26-x-algorithm-advisor-design.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[username]/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/[username]/compose/: page.tsx
frontend/src/app/api/og/[username]/: route.tsx
frontend/src/components/charts/: RadarChart.tsx  RadarChartLazy.tsx
frontend/src/components/editor/: PolishButtons.tsx  PostEditor.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
